--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -67,6 +68,6 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: 'Lilita One', 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
 }
