are you using the image that is in the ppublic folder

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,7 +80,7 @@
 
 /* New Hero Background Style */
 .hero-background {
-  background-image: url('https://storage.googleapis.com/project-game-assets/night.png');
+  background-image: url('/night.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
