also make sure it switches color as well as in when in light mode the bg

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,11 +80,16 @@
 
 /* New Hero Background Style */
 .hero-background {
-  background-image: url('/night.png');
+  background-image: url('/day.png'); /* Default to day image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.dark .hero-background {
+  background-image: url('/night.png'); /* Switch to night image in dark mode */
+}
+
 
 /* Animations for Hero Section */
 
