--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,7 @@
   }
   .font-title {
     font-family: 'Baloo 2', 'Poppins', sans-serif;
-    text-shadow: 2px 2px 0px #1E3A8A, 4px 4px 0px rgba(0, 0, 0, 0.2);
+    text-shadow: 2px 2px 0px hsl(var(--primary-darker)), 4px 4px 0px rgba(0,0,0,0.1);
   }
   .font-body {
     font-family: 'Poppins', sans-serif;
@@ -134,7 +134,7 @@
   position: absolute;
   z-index: 4;
   animation: plane-fly 25s linear infinite;
-  transform: scale(0.5) rotate(15deg);
+  transform: scale(0.3) rotate(15deg);
 }
 
 
