--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,48 +96,14 @@
 
 /* Animations for Hero Section */
 
-/* Stars */
-@keyframes move-twink-back {
-    from {background-position:0 0;}
-    to {background-position:-10000px 5000px;}
-}
-
-.stars {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background: transparent url('https://storage.googleapis.com/project-game-assets/stars.png') repeat top center;
-  z-index: 1;
-}
-.twinkling{
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  width:100%;
-  height:100%;
-  display:block;
-  background:transparent url('https://storage.googleapis.com/project-game-assets/twinkling.png') repeat top center;
-  z-index:2;
-  animation:move-twink-back 200s linear infinite;
-}
-
-/* Plane */
-@keyframes plane-fly {
-  0% { top: 70%; left: -10%; }
-  100% { top: 20%; left: 110%; }
-}
-.plane {
-  position: absolute;
-  z-index: 4;
-  animation: plane-fly 25s linear infinite;
-  transform: scale(0.3) rotate(15deg);
+.flight-dot {
+    position: absolute;
+    background-color: hsla(60, 100%, 90%, 0.7);
+    border-radius: 50%;
+    width: 3px;
+    height: 3px;
+    box-shadow: 0 0 4px 1px hsla(60, 100%, 90%, 0.7);
+    will-change: transform;
 }
 
 
@@ -181,4 +147,3 @@
 .neon-glow-icon:hover {
     filter: drop-shadow(0 0 3px rgba(0, 191, 255, 0.8)) drop-shadow(0 0 8px rgba(0, 191, 255, 0.6));
 }
-
